buildscript {
    repositories { mavenCentral() }
}

plugins {
    id 'java-library'
	id 'com.gradleup.shadow' version '9.3.2'
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
}

/* 'api' allows the dependency to be exposed to consumers (ie. other projects that depend on this one) while implementation hides it. */
dependencies {
	implementation "com.github.crykn:kryonet:${project.kryonet_version}"
	implementation "com.esotericsoftware:kryo:${project.kryo_version}"

    implementation "com.azuriom:azauth:${project.azauth_version}" // See : https://azuriom.com/

    implementation "io.javalin:javalin:${project.javalin_version}"
    implementation "com.github.Niwer1525:Queryon:${project.queryon_version}"

	implementation "com.google.code.findbugs:jsr305:${project.jrs_version}" // Javax Annotations for JDA
	implementation "net.dv8tion:JDA:${project.JDA_version}"

	api "com.google.code.gson:gson:${project.gson_version}"
    api "ch.qos.logback:logback-classic:${project.logback_version}" // JDA & Javalin are using this
	api "com.github.Niwer1525:Lumen:${project.lumen_version}"

    /* SHADOWING */

	shadow "com.github.crykn:kryonet:${project.kryonet_version}"
	shadow "com.esotericsoftware:kryo:${project.kryo_version}"

    shadow "com.azuriom:azauth:${project.azauth_version}" // See : https://azuriom.com/

    shadow "io.javalin:javalin:${project.javalin_version}"
	shadow "com.github.Niwer1525:Queryon:${project.queryon_version}"
	
    shadow "com.google.code.findbugs:jsr305:${project.jrs_version}" // Javax Annotations for JDA
	shadow "net.dv8tion:JDA:${project.JDA_version}"

	shadow "com.google.code.gson:gson:${project.gson_version}"
    shadow "ch.qos.logback:logback-classic:${project.logback_version}" // JDA & Javalin are using this
	shadow "com.github.Niwer1525:Lumen:${project.lumen_version}"
	
}

tasks.withType(JavaCompile).configureEach { it.options.release = 21 }
sourceCompatibility = targetCompatibility = JavaVersion.VERSION_21

version = '1.0.0'
archivesBaseName = 'photon'

/* Generate JAR */
jar {
	duplicatesStrategy 'exclude'
   	manifest { attributes([ "Main-Class": "com.photon.network.NetworkEngine" ]) }
}

def commonExclusions = [
	'natives/**',
	'META-INF/*.SF',
	'META-INF/*.DSA',
	'META-INF/*.RSA',
	'sqlite-jdbc.properties',
	'photon_logo.png'
]
def thirdPartyExclusions = [
	'net/**',
	'ch/**',
	'com/sun/mail/**',
	'javax/mail/**',
	'tomp2p/**',
	'club/**',
	'org/sqlite/**',
	'com/azuriom/**',
	'io/javalin/**',
    'google/protobuf/**',
    'org/eclipse/jetty/**',
	'niwer/queryon/**'
]

/* Add all dependcies to the jar */
shadowJar {
	minimize()
   	configurations = [project.configurations.shadow]
	commonExclusions.each { exclude it } // Exclude unnecessary files
	archiveFileName = "network.jar"
	archiveClassifier.set('')
}

task apiJar(type: Jar) {
   	dependsOn shadowJar
    def jarFile = shadowJar.outputs.files.singleFile
    from zipTree(jarFile) // Unzip the shadow jar
    (commonExclusions + thirdPartyExclusions + ['public/**', 'lang/**']).each { exclude it } // Exclude unnecessary files
	exclude { details ->
		if (!details.path.endsWith('.class')) return false
		try {
			// Class files are binary; ISO-8859-1 keeps a 1:1 byte-to-char mapping for a raw substring check.
			return new String(details.file.bytes, 'ISO-8859-1').contains('Lcom/photon/util/NetworkOnly;')
		} catch (Exception e) {
			return false
		}
	} // Exclude @NetworkOnly classes
    archiveFileName = "api.jar"
}

tasks.build.dependsOn shadowJar, apiJar